--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -85,73 +85,96 @@
    "id": "24086293-58c0-4664-b00e-fcbb2faf36c7",
    "metadata": {},
    "source": [
-    "# Dive into the FDA trial example \n",
+    "# Statistical Testing with a Linear Model\n",
     "\n",
-    "When studying the effect of a drug, such as Drug A, which is thought to reduce blood pressure, we need a systematic way to determine whether the observed effect is due to the drug or just random chance. Statistical tests allow us to:\n",
-    "\n",
-    "- Quantify uncertainty in the results.\n",
-    "- Make evidence-based conclusions.\n",
-    "- Minimize the influence of bias and random noise.\n",
-    "\n",
-    "Without statistical tests, we risk drawing incorrect conclusions that could lead to ineffective or even harmful treatments being administered.\n",
+    "To analyze the effect of Drug A on blood pressure, we can model blood pressure as a linear function of the binary variable $D$ (indicating whether the drug is administered). This approach allows us to estimate the effect of the drug and assess its statistical properties.\n",
     "\n",
     "---\n",
     "\n",
-    "## Control and Treatment Groups\n",
+    "## Linear Model with Blood Pressure as Output\n",
     "\n",
-    "To evaluate the effectiveness of Drug A, we divide the population into two groups:\n",
+    "The model is defined as:\n",
+    "$$\n",
+    "Y = \\beta_0 + \\beta_1 D + \\epsilon\n",
+    "$$\n",
+    "where:\n",
+    "- $Y$: Blood pressure (output variable).\n",
+    "- $\\beta_0$: Intercept (average blood pressure for the control group).\n",
+    "- $\\beta_1$: Effect of Drug A (difference in mean blood pressure between treatment and control groups).\n",
+    "- $D$: Binary variable ($D = 1$ if Drug A is administered, $D = 0$ otherwise).\n",
+    "- $\\epsilon$: Error term (assumed to be normally distributed with mean $0$ and variance $\\sigma^2$).\n",
     "\n",
-    "- **Treatment Group**: Receives Drug A.\n",
-    "- **Control Group**: Does not receive the drug (may receive a placebo instead).\n",
-    "\n",
-    "This setup helps isolate the effect of the drug by comparing outcomes between the two groups, ensuring that other factors are balanced between them.\n",
+    "The goal is to estimate $\\beta_1$, the effect of Drug A.\n",
     "\n",
     "---\n",
     "\n",
-    "## Hypothesis Testing and Errors\n",
+    "## Properties of the Estimator for $\\beta_1$\n",
     "\n",
-    "### Hypotheses\n",
-    "- **Null Hypothesis (H₀):** Drug A has no effect on blood pressure.\n",
-    "- **Alternative Hypothesis (H₁):** Drug A reduces blood pressure.\n",
-    "\n",
-    "### Errors\n",
-    "- **Type I Error (False Positive):** Rejecting H₀ when it is true (concluding Drug A is effective when it’s not).\n",
-    "- **Type II Error (False Negative):** Failing to reject H₀ when it is false (concluding Drug A is not effective when it is).\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## p-Value and Estimators\n",
-    "\n",
-    "- **p-Value**: The probability of observing results as extreme as those in the study, assuming H₀ is true. A low p-value (typically <0.05) suggests evidence against H₀.\n",
-    "- **Estimators**: Quantitative measures used to estimate the effect size of Drug A.\n",
-    "\n",
-    "If $ p\\% $ of the population receives Drug A, let the effect of the drug $D $ be a binary variable:\n",
-    "- $ D = 1 $: If blood pressure decreases.\n",
-    "- $ D = 0 $: Otherwise.\n",
-    "\n",
-    "The **mean effect** of the drug is given by:  \n",
+    "The estimator for $\\beta_1$ is given by:\n",
     "$$\n",
-    "\\mu_D = \\frac{1}{n} \\sum_{i=1}^n D_i\n",
-    "$$  \n",
-    "where $ n $ is the sample size.\n",
-    "\n",
-    "The **standard deviation** of $ D $ is:  \n",
+    "\\hat{\\beta}_1 = \\frac{\\sum_{i=1}^n (D_i - \\bar{D})(Y_i - \\bar{Y})}{\\sum_{i=1}^n (D_i - \\bar{D})^2}\n",
     "$$\n",
-    "\\sigma_D = \\sqrt{\\mu_D (1 - \\mu_D)}\n",
+    "where $\\bar{D}$ and $\\bar{Y}$ are the means of $D$ and $Y$.\n",
+    "\n",
+    "### Mean of the Estimator\n",
+    "The mean of $\\hat{\\beta}_1$ is:\n",
+    "$$\n",
+    "E[\\hat{\\beta}_1] = \\beta_1\n",
     "$$\n",
     "\n",
-    "The **95% confidence interval (CI)** for $ \\mu_D $ can be calculated as:  \n",
+    "### Standard Deviation of the Estimator\n",
+    "The standard deviation of $\\hat{\\beta}_1$ is:\n",
     "$$\n",
-    "\\text{95% CI} = \\mu_D \\pm 1.96 \\times \\frac{\\sigma_D}{\\sqrt{n}}\n",
+    "\\text{SD}(\\hat{\\beta}_1) = \\sqrt{\\frac{\\sigma^2}{\\sum_{i=1}^n (D_i - \\bar{D})^2}}\n",
+    "$$\n",
+    "\n",
+    "### Bias of the Estimator\n",
+    "Since $E[\\hat{\\beta}_1] = \\beta_1$, the estimator is unbiased:\n",
+    "$$\n",
+    "\\text{Bias}(\\hat{\\beta}_1) = E[\\hat{\\beta}_1] - \\beta_1 = 0\n",
+    "$$\n",
+    "\n",
+    "### 95% Confidence Interval\n",
+    "The 95% confidence interval for $\\hat{\\beta}_1$ is:\n",
+    "$$\n",
+    "\\text{95% CI} = \\hat{\\beta}_1 \\pm 1.96 \\times \\text{SD}(\\hat{\\beta}_1)\n",
     "$$\n",
     "\n",
     "---\n",
     "\n",
-    "### Interpretation\n",
-    "- A narrow CI indicates a precise estimate of the drug’s effect.\n",
-    "- If the CI does not include 0, it provides evidence that Drug A significantly affects blood pressure.\n",
+    "## Extending the Model with an Additional Variable $X$\n",
     "\n",
-    "By following this structured approach, we can scientifically assess whether Drug A is effective and quantify its impact on the population.\n"
+    "Now suppose we introduce another variable $X$ (e.g., age or BMI), which also influences blood pressure. The linear model becomes:\n",
+    "$$\n",
+    "Y = \\beta_0 + \\beta_1 D + \\beta_2 X + \\epsilon\n",
+    "$$\n",
+    "where:\n",
+    "- $\\beta_2$: Coefficient representing the effect of $X$ on blood pressure.\n",
+    "\n",
+    "### Estimator for $\\beta_1$ with $X$\n",
+    "The estimator for $\\beta_1$ in this model is:\n",
+    "$$\n",
+    "\\hat{\\beta}_1 = \\frac{\\sum_{i=1}^n \\left((D_i - \\bar{D}) (Y_i - \\hat{Y}_{X,i})\\right)}{\\sum_{i=1}^n (D_i - \\bar{D})^2}\n",
+    "$$\n",
+    "where $\\hat{Y}_{X,i} = \\beta_2 X_i$ accounts for the contribution of $X$.\n",
+    "\n",
+    "### Mean, Standard Deviation, and Bias of $\\hat{\\beta}_1$\n",
+    "- **Mean**:  \n",
+    "  $$ E[\\hat{\\beta}_1] = \\beta_1 $$  \n",
+    "  (Unbiased if $D$ and $X$ are independent.)\n",
+    "\n",
+    "- **Standard Deviation**:  \n",
+    "  $$ \\text{SD}(\\hat{\\beta}_1) = \\sqrt{\\frac{\\sigma^2}{\\sum_{i=1}^n (D_i - \\bar{D})^2}} $$  \n",
+    "  (Similar to the single-variable case but adjusted for the presence of $X$.)\n",
+    "\n",
+    "- **Bias**:  \n",
+    "  $$ \\text{Bias}(\\hat{\\beta}_1) = 0 $$  \n",
+    "  (As long as the model is correctly specified.)\n",
+    "\n",
+    "- **95% Confidence Interval**:  \n",
+    "  $$ \\text{95% CI} = \\hat{\\beta}_1 \\pm 1.96 \\times \\text{SD}(\\hat{\\beta}_1) $$\n",
+    "\n",
+    "This extended model enables us to isolate the effect of Drug A ($\\beta_1$) while accounting for the influence of $X$, leading to more robust and interpretable results.\n"
    ]
   },
   {
