--- a/lectures/lecture1&2.ipynb
+++ b/lectures/lecture1&2.ipynb
@@ -5,7 +5,7 @@
    "id": "cf6b8f9b-7612-4067-9a45-2169944a70be",
    "metadata": {},
    "source": [
-    "# Introduction to Programming, Statistics, Data Science, and Machine Learning for MD Students\n",
+    "# Lecture 1&2 - Introduction to Programming, Statistics, Data Science, and Machine Learning for MD Students\n",
     "\n",
     "Welcome to the first lecture of this course! Over the coming weeks, we will dive into the foundational concepts of programming, statistics, data science, and machine learning. This course is tailored to equip MD students with the computational and analytical skills needed to tackle real-world medical challenges and make data-driven decisions.\n",
     "\n",
