--- a/lectures/lecture2.ipynb
+++ b/lectures/lecture2.ipynb
@@ -6,6 +6,582 @@
    "metadata": {},
    "source": [
     "# Lecture 2 - Introduction to Python (part II)\n",
+    "--- \n",
+    "\n",
+    "## Logistics\n",
+    "\n",
+    "1. I have added a few reading suggestions to the reading directory on the GitHub repo, please refer to them if you are interested in reading more about Python and data science.\n",
+    "2. Lecture recordings are shared in the channel after each lecture - please let us know if you have any difficulties accessing the lecture recordings or the contents on the repository. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e97cd24-3ac6-47ff-a300-ab1ff4763975",
+   "metadata": {},
+   "source": [
+    "# Conditional Statements in Python\n",
+    "\n",
+    "Conditional statements are used to execute a block of code based on certain conditions. They allow your program to make decisions and branch execution paths depending on the evaluation of expressions.\n",
+    "\n",
+    "## Types of Conditional Statements\n",
+    "\n",
+    "### 1. **`if` Statement**\n",
+    "The `if` statement is used to test a condition. If the condition evaluates to `True`, the block of code inside the `if` statement is executed.\n",
+    "\n",
+    "```python\n",
+    "# Example\n",
+    "age = 20\n",
+    "if age >= 18:\n",
+    "    print(\"You are eligible to vote.\")\n",
+    "```\n",
+    "\n",
+    "### 2. **`if-else` Statement**\n",
+    "The `if-else` statement allows you to define an alternative block of code to run when the condition evaluates to `False`.\n",
+    "\n",
+    "```python\n",
+    "# Example\n",
+    "age = 16\n",
+    "if age >= 18:\n",
+    "    print(\"You are eligible to vote.\")\n",
+    "else:\n",
+    "    print(\"You are not eligible to vote.\")\n",
+    "```\n",
+    "\n",
+    "### 3. **`if-elif-else` Statement**\n",
+    "The `if-elif-else` statement is used when you have multiple conditions to check. The first condition that evaluates to `True` will execute its block of code, and the rest will be ignored.\n",
+    "\n",
+    "```python\n",
+    "# Example\n",
+    "grade = 85\n",
+    "if grade >= 90:\n",
+    "    print(\"A\")\n",
+    "elif grade >= 80:\n",
+    "    print(\"B\")\n",
+    "elif grade >= 70:\n",
+    "    print(\"C\")\n",
+    "else:\n",
+    "    print(\"F\")\n",
+    "```\n",
+    "\n",
+    "### 4. **Nested `if` Statements**\n",
+    "You can nest one `if` statement inside another to check more complex conditions.\n",
+    "\n",
+    "```python\n",
+    "# Example\n",
+    "age = 25\n",
+    "citizen = True\n",
+    "if age >= 18:\n",
+    "    if citizen:\n",
+    "        print(\"You can vote.\")\n",
+    "    else:\n",
+    "        print(\"You need to be a citizen to vote.\")\n",
+    "else:\n",
+    "    print(\"You are too young to vote.\")\n",
+    "```\n",
+    "\n",
+    "## Logical Operators in Conditions\n",
+    "Conditional statements often use logical operators to combine or modify conditions:\n",
+    "\n",
+    "- **`and`**: Returns `True` if both conditions are `True`.\n",
+    "- **`or`**: Returns `True` if at least one condition is `True`.\n",
+    "- **`not`**: Inverts the boolean value of the condition.\n",
+    "\n",
+    "### Example with Logical Operators\n",
+    "```python\n",
+    "# Example\n",
+    "age = 19\n",
+    "has_ID = True\n",
+    "if age >= 18 and has_ID:\n",
+    "    print(\"You can enter.\")\n",
+    "else:\n",
+    "    print(\"You cannot enter.\")\n",
+    "```\n",
+    "\n",
+    "## Key Points to Remember\n",
+    "- **Indentation is critical in Python to define blocks of code.**\n",
+    "- Conditions must evaluate to a boolean value (`True` or `False`).\n",
+    "- Use `elif` to test multiple conditions, but only one block will execute.\n",
+    "- Logical operators help build complex conditions.\n",
+    "\n",
+    "Conditional statements are fundamental for controlling the flow of your program, making them an essential concept to master!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ccf22ef-08a9-44a4-98cf-4b89f5278e28",
+   "metadata": {},
+   "source": [
+    "# Example 1: Determining Disease Based on Patient Vitals\n",
+    "\n",
+    "In this exercise, you will write a Python program to determine the possible disease a patient might have based on their vitals. The program should take the following vitals as input:\n",
+    "\n",
+    "1. **Heart Rate (beats per minute)**\n",
+    "2. **Systolic Blood Pressure (mmHg)**\n",
+    "3. **Diastolic Blood Pressure (mmHg)**\n",
+    "4. **Oxygen Saturation (SatO2, %)**\n",
+    "\n",
+    "Use the chart below to determine the disease based on the given ranges for each vital. If the vitals do not match any disease in the chart, the output should state \"No matching disease found.\"\n",
+    "\n",
+    "| Heart Rate (bpm) | Systolic BP (mmHg) | Diastolic BP (mmHg) | SatO2 (%) | Disease                 |\n",
+    "|-------------------|--------------------|----------------------|-----------|------------------------|\n",
+    "| > 100            | > 140             | > 90                 | < 95      | Hypertension & Hypoxia |\n",
+    "| < 60             | < 90              | < 60                 | > 95      | Hypotension            |\n",
+    "| 60 - 100         | 90 - 120          | 60 - 80              | 95 - 100  | Normal                |\n",
+    "| > 100            | 90 - 120          | 60 - 80              | < 90      | Tachycardia & Hypoxia  |\n",
+    "\n",
+    "### Instructions\n",
+    "1. Use `if-elif-else` statements to check the conditions based on the chart.\n",
+    "2. Test your function with different inputs to ensure it works as expected.\n",
+    "\n",
+    "### Example Input and Output\n",
+    "\n",
+    "#### Input:\n",
+    "```python\n",
+    "heart_rate = 105\n",
+    "sys_bp = 150\n",
+    "dia_bp = 95\n",
+    "sat_o2 = 92\n",
+    "```\n",
+    "\n",
+    "#### Output:\n",
+    "```\n",
+    "Disease: Hypertension & Hypoxia\n",
+    "```\n",
+    "\n",
+    "#### Input:\n",
+    "```python\n",
+    "heart_rate = 75\n",
+    "sys_bp = 110\n",
+    "dia_bp = 70\n",
+    "sat_o2 = 97\n",
+    "```\n",
+    "\n",
+    "#### Output:\n",
+    "```\n",
+    "Disease: Normal\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05287b35-268d-411d-85a8-5e1f5c67e650",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's spend some time to implement the program described above\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a33f1a18-f62b-4b91-8cc3-0e6d93aeb2f9",
+   "metadata": {},
+   "source": [
+    "# Example 2: Diabetes Risk Assessment\n",
+    "\n",
+    "In this exercise, you will write a Python program to determine the risk level of diabetes based on a patient's fasting blood glucose levels and family history.\n",
+    "\n",
+    "## Risk Assessment Table\n",
+    "\n",
+    "| Fasting Glucose (mg/dL) | Family History | Risk Level         |\n",
+    "|-------------------------|----------------|--------------------|\n",
+    "| < 100                   | No             | Low Risk           |\n",
+    "| 100 - 125               | Yes            | Moderate Risk      |\n",
+    "| >= 126                  | Yes/No         | High Risk          |\n",
+    "\n",
+    "### Instructions\n",
+    "\n",
+    "1. Use `if-elif-else` statements to check the conditions based on the risk assessment table.\n",
+    "2. Return the corresponding risk level as a string (e.g., \"Low Risk\", \"Moderate Risk\", \"High Risk\").\n",
+    "3. Test your function with different inputs to ensure it works as expected.\n",
+    "\n",
+    "### Example Input and Output\n",
+    "\n",
+    "#### Input:\n",
+    "```python\n",
+    "fasting_glucose = 130\n",
+    "family_history = True\n",
+    "```\n",
+    "\n",
+    "#### Output:\n",
+    "```\n",
+    "Risk Level: High Risk\n",
+    "```\n",
+    "\n",
+    "#### Input:\n",
+    "```python\n",
+    "fasting_glucose = 90\n",
+    "family_history = False\n",
+    "```\n",
+    "\n",
+    "#### Output:\n",
+    "```\n",
+    "Risk Level: Low Risk\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07f1ad30-8163-4cef-9189-04c3d405c507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's spend some time to implement the program described above\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e47f8f8d-6368-48c1-beff-f0620f4b5ebf",
+   "metadata": {},
+   "source": [
+    "# Loops in Python\n",
+    "\n",
+    "Loops are used in Python to execute a block of code repeatedly, based on a condition. Python provides two types of loops:\n",
+    "\n",
+    "1. **For Loop**\n",
+    "2. **While Loop**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1. **For Loop**\n",
+    "\n",
+    "A `for` loop is used to iterate over a sequence or any iterable object (e.g. [1,2,3,4]). It is ideal when the number of iterations is known.\n",
+    "\n",
+    "### Syntax:\n",
+    "```python\n",
+    "for variable in iterable:\n",
+    "    # Code block\n",
+    "```\n",
+    "\n",
+    "### Example:\n",
+    "```python\n",
+    "# Example: Iterating through a list\n",
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "for fruit in fruits:\n",
+    "    print(fruit)\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "```\n",
+    "apple\n",
+    "banana\n",
+    "cherry\n",
+    "```\n",
+    "\n",
+    "### Using `range()` with `for`:\n",
+    "The `range()` function generates a sequence of numbers.\n",
+    "\n",
+    "```python\n",
+    "# Example: Using range\n",
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "```\n",
+    "0\n",
+    "1\n",
+    "2\n",
+    "3\n",
+    "4\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. **While Loop**\n",
+    "\n",
+    "A `while` loop executes a block of code as long as a given condition is `True`. It is useful when the number of iterations is not predetermined.\n",
+    "\n",
+    "### Syntax:\n",
+    "```python\n",
+    "while condition:\n",
+    "    # Code block\n",
+    "```\n",
+    "\n",
+    "### Example:\n",
+    "```python\n",
+    "# Example: Countdown\n",
+    "count = 5\n",
+    "while count > 0:\n",
+    "    print(count)\n",
+    "    count -= 1\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "```\n",
+    "5\n",
+    "4\n",
+    "3\n",
+    "2\n",
+    "1\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Controlling Loops\n",
+    "\n",
+    "### 1. **`break` Statement**\n",
+    "The `break` statement is used to exit a loop prematurely.\n",
+    "\n",
+    "```python\n",
+    "# Example: Breaking out of a loop\n",
+    "for i in range(5):\n",
+    "    if i == 3:\n",
+    "        break\n",
+    "    print(i)\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "```\n",
+    "0\n",
+    "1\n",
+    "2\n",
+    "```\n",
+    "\n",
+    "### 2. **`continue` Statement**\n",
+    "The `continue` statement skips the rest of the code in the current iteration and moves to the next iteration.\n",
+    "\n",
+    "```python\n",
+    "# Example: Skipping an iteration\n",
+    "for i in range(5):\n",
+    "    if i == 3:\n",
+    "        continue\n",
+    "    print(i)\n",
+    "```\n",
+    "\n",
+    "**Output:**\n",
+    "```\n",
+    "0\n",
+    "1\n",
+    "2\n",
+    "4\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Choosing Between `for` and `while`\n",
+    "- Use a **`for` loop** when you know the number of iterations or are iterating over a sequence.\n",
+    "- Use a **`while` loop** when the number of iterations depends on a condition that may change dynamically.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Exercise:\n",
+    "Write a program to print all even numbers between 1 and 20 using both `for` and `while` loops.\n",
+    "\n",
+    "#### Example Output:\n",
+    "```\n",
+    "For Loop:\n",
+    "2\n",
+    "4\n",
+    "6\n",
+    "8\n",
+    "10\n",
+    "12\n",
+    "14\n",
+    "16\n",
+    "18\n",
+    "20\n",
+    "\n",
+    "While Loop:\n",
+    "2\n",
+    "4\n",
+    "6\n",
+    "8\n",
+    "10\n",
+    "12\n",
+    "14\n",
+    "16\n",
+    "18\n",
+    "20\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# Using a for loop\n",
+    "print(\"For Loop:\")\n",
+    "for i in range(1, 21):\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)\n",
+    "\n",
+    "# Using a while loop\n",
+    "print(\"\\nWhile Loop:\")\n",
+    "i = 1\n",
+    "while i <= 20:\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)\n",
+    "    i += 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "112217b4-bb32-4940-baf8-21fad1f4766a",
+   "metadata": {},
+   "source": [
+    "# Example 3: Prime Number Checker\n",
+    "\n",
+    "## Task\n",
+    "Write a Python program that takes in a number and determines whether the number is **prime** or **not prime**.\n",
+    "\n",
+    "### What is a Prime Number?\n",
+    "A prime number is a number that:\n",
+    "- Is greater than 1.\n",
+    "- Can only be divided evenly by **1** and **itself**.\n",
+    "\n",
+    "### Program Requirements\n",
+    "1. The program should take an integer as input.\n",
+    "2. It should check if the number is prime.\n",
+    "3. Print **\"PRIME\"** if the number is a prime number.\n",
+    "4. Print **\"NOT A PRIME\"** if the number is not a prime number.\n",
+    "\n",
+    "### Example Input and Output\n",
+    "#### Input:\n",
+    "```python\n",
+    "number = 7\n",
+    "```\n",
+    "#### Output:\n",
+    "```\n",
+    "PRIME\n",
+    "```\n",
+    "#### Input:\n",
+    "```python\n",
+    "number = 10\n",
+    "```\n",
+    "#### Output:\n",
+    "```\n",
+    "NOT A PRIME\n",
+    "```\n",
+    "\n",
+    "### Instructions\n",
+    "1. Use a loop to check if the number has divisors other than 1 and itself.\n",
+    "2. If a divisor is found, return \"NOT A PRIME\"; otherwise, return \"PRIME\".\n",
+    "\n",
+    "### Additional Challenge\n",
+    "Extend your program to:\n",
+    "- Check a range of numbers (e.g., all numbers from 1 to 100).\n",
+    "- Print all prime numbers in that range.\n",
+    "\n",
+    "Example Output for Range 1 to 10:\n",
+    "```\n",
+    "2 is PRIME\n",
+    "3 is PRIME\n",
+    "4 is NOT A PRIME\n",
+    "5 is PRIME\n",
+    "6 is NOT A PRIME\n",
+    "7 is PRIME\n",
+    "8 is NOT A PRIME\n",
+    "9 is NOT A PRIME\n",
+    "10 is NOT A PRIME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61d95529-6930-4a1e-8167-c909897903e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's spend some time to implement the program described above\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff3d7118-0fd0-4eb2-8e21-b34abb420303",
+   "metadata": {},
+   "source": [
+    "# Exercise 3: Calculating Allele Frequency from a 2D List of Sequences\n",
+    "\n",
+    "In this exercise, we will compute the **allele frequency** of the dominant allele from a list of DNA sequences. Each sequence contains nucleotides (`A`, `T`, `C`, `G`), and the sequences are provided in a 2D list.\n",
+    "\n",
+    "### Objectives\n",
+    "1. **Access individual bases** from the sequences stored in the 2D list.\n",
+    "2. **Count occurrences** of each nucleotide across all sequences.\n",
+    "3. Compute and **print the percentage** of each nucleotide.\n",
+    "4. **Use NumPy** to find the dominant allele.\n",
+    "\n",
+    "### Example Input\n",
+    "```python\n",
+    "sequences = [\n",
+    "    [\"A\", \"T\", \"G\", \"G\"],\n",
+    "    [\"A\", \"A\", \"T\", \"G\"],\n",
+    "    [\"C\", \"A\", \"G\", \"G\"],\n",
+    "    [\"T\", \"A\", \"C\", \"G\"]\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "### Expected Output\n",
+    "```\n",
+    "Dominant Allele: A - 50%\n",
+    "Dominant Allele: A - 75%\n",
+    "Dominant Allele: C - 25%\n",
+    "Dominant Allele: G - 100%\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### Key Points\n",
+    "1. **Accessing elements in 2D lists:**\n",
+    "   - Use `sequences[row][column]` to access individual bases.\n",
+    "   - Example: `sequences[0][0]` gives `\"A\"` (first row, first column).\n",
+    "\n",
+    "2. **Nested loops:**\n",
+    "   - Outer loop iterates through each sequence (row).\n",
+    "   - Inner loop iterates through each base in the sequence (column).\n",
+    "\n",
+    "3. **Percentage calculation:**\n",
+    "   - Use the formula:\n",
+    "     ```python\n",
+    "     frequency = (count / total_bases) * 100\n",
+    "     ```\n",
+    "\n",
+    "4. **Using NumPy for advanced operations:**\n",
+    "   - Use `max` with a dictionary to find the key with the highest value.\n",
+    "\n",
+    "### Challenge\n",
+    "Modify the program to:\n",
+    "- Handle sequences of different lengths.\n",
+    "- Print the most frequent nucleotide.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bca6822-7342-491f-975b-339f1f8f8742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's spend some time to implement the program described above\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
