--- a/lectures/lecture2.ipynb
+++ b/lectures/lecture2.ipynb
@@ -515,7 +515,7 @@
    "id": "ff3d7118-0fd0-4eb2-8e21-b34abb420303",
    "metadata": {},
    "source": [
-    "# Exercise 3: Calculating Allele Frequency from a 2D List of Sequences\n",
+    "# Example 4: Calculating Allele Frequency from a 2D List of Sequences\n",
     "\n",
     "In this exercise, we will compute the **allele frequency** of the dominant allele from a list of DNA sequences. Each sequence contains nucleotides (`A`, `T`, `C`, `G`), and the sequences are provided in a 2D list.\n",
     "\n",
