adding the code for ecoli genome

--- a/lectures/lecture3.ipynb
+++ b/lectures/lecture3.ipynb
@@ -142,17 +142,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7593d9e8-9477-45fc-a928-ccc43862c3c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the E. coli genome: 4639675\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's spend some time working on this example \n",
+    "from Bio import SeqIO\n",
     "\n",
+    "# Path to your FASTA file\n",
+    "fasta_file = \"/Users/arman/Arman/Teaching/TUMS2025/data/ecoli_genome.fasta\"\n",
     "\n",
+    "# Read the FASTA file and extract the sequence\n",
+    "ecoli_genome = \"\"\n",
     "\n",
+    "for record in SeqIO.parse(fasta_file, \"fasta\"):\n",
+    "    ecoli_genome += str(record.seq)\n",
     "\n",
-    "\n",
+    "# Verify the sequence length or contents\n",
+    "print(f\"Length of the E. coli genome: {len(ecoli_genome)}\")\n",
     "\n",
     "\n",
     "\n",
