--- a/lectures/lecture4.ipynb
+++ b/lectures/lecture4.ipynb
@@ -13,10 +13,124 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b067231-f7db-4802-802c-f64577818fcf",
+   "metadata": {},
+   "source": [
+    "# Lists, Sets, and Dictionaries\n",
+    "## 1. Lists\n",
+    "- **Definition**: An ordered collection of items (can contain duplicates).\n",
+    "- **Key Features**:\n",
+    "  - Mutable (modifiable after creation).\n",
+    "  - Items can be of any data type.\n",
+    "  - Supports indexing and slicing.\n",
+    "\n",
+    "### Common Operations\n",
+    "```python\n",
+    "# Creating a list\n",
+    "my_list = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Accessing elements\n",
+    "print(my_list[0])  # Output: 1\n",
+    "\n",
+    "# Modifying elements\n",
+    "my_list[2] = 10\n",
+    "\n",
+    "# Adding elements\n",
+    "my_list.append(6)\n",
+    "\n",
+    "# Removing elements\n",
+    "my_list.remove(2)\n",
+    "\n",
+    "# List comprehension\n",
+    "squared = [x**2 for x in my_list]\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. Sets\n",
+    "- **Definition**: An unordered collection of unique items.\n",
+    "- **Key Features**:\n",
+    "  - Mutable (but elements must be hashable, e.g., no lists).\n",
+    "  - Automatically removes duplicates.\n",
+    "  - No indexing or slicing (since unordered).\n",
+    "\n",
+    "### Common Operations\n",
+    "```python\n",
+    "# Creating a set\n",
+    "my_set = {1, 2, 3, 4}\n",
+    "\n",
+    "# Adding elements\n",
+    "my_set.add(5)\n",
+    "\n",
+    "# Removing elements\n",
+    "my_set.remove(2)\n",
+    "\n",
+    "# Set operations\n",
+    "set_a = {1, 2, 3}\n",
+    "set_b = {3, 4, 5}\n",
+    "\n",
+    "union = set_a | set_b         # {1, 2, 3, 4, 5}\n",
+    "intersection = set_a & set_b  # {3}\n",
+    "difference = set_a - set_b    # {1, 2}\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. Dictionaries\n",
+    "- **Definition**: A collection of key-value pairs.\n",
+    "- **Key Features**:\n",
+    "  - Keys must be unique and immutable.\n",
+    "  - Values can be of any type.\n",
+    "  - Provides fast lookups by key.\n",
+    "\n",
+    "### Common Operations\n",
+    "```python\n",
+    "# Creating a dictionary\n",
+    "my_dict = {'name': 'Alice', 'age': 25}\n",
+    "\n",
+    "# Accessing values\n",
+    "print(my_dict['name'])  # Output: Alice\n",
+    "\n",
+    "# Modifying values\n",
+    "my_dict['age'] = 26\n",
+    "\n",
+    "# Adding new key-value pairs\n",
+    "my_dict['city'] = 'New York'\n",
+    "\n",
+    "# Removing key-value pairs\n",
+    "del my_dict['city']\n",
+    "\n",
+    "# Iterating through keys and values\n",
+    "for key, value in my_dict.items():\n",
+    "    print(f\"{key}: {value}\")\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Summary Table\n",
+    "\n",
+    "| Feature         | List                  | Set                   | Dictionary                    |\n",
+    "|------------------|-----------------------|-----------------------|-------------------------------|\n",
+    "| Ordered          | Yes                  | No                    | No (insertion order preserved in Python 3.7+) |\n",
+    "| Allows Duplicates| Yes                  | No                    | Keys: No; Values: Yes        |\n",
+    "| Mutable          | Yes                  | Yes                   | Yes                          |\n",
+    "| Indexing         | Yes                  | No                    | No                           |\n",
+    "| Common Use Case  | Sequential data      | Unique items          | Key-value lookups            |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Practical Examples\n",
+    "1. Use **lists** when maintaining an ordered collection or sequence (e.g., processing a queue).\n",
+    "2. Use **sets** to handle unique elements and perform mathematical set operations.\n",
+    "3. Use **dictionaries** for mapping relationships or performing fast lookups."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "88df6c6a-2fe5-4ce0-b00d-97c2c0cba39a",
    "metadata": {},
    "source": [
-    "# Example 2: Write a Function to Find the Reverse Complement of a DNA Sequence\n",
+    "# Example 1: Write a Function to Find the Reverse Complement of a DNA Sequence\n",
     "\n",
     "In this exercise, you will write a Python function that takes a DNA sequence as input and returns its **reverse complement**.\n",
     "\n",
