--- a/lectures/lecture4.ipynb
+++ b/lectures/lecture4.ipynb
@@ -126,6 +126,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "88b74b7e-cc93-42ee-858b-eee6b06918fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 12, True, 12.1, 'Age', 'Age', 'Age']\n",
+      "[5, 'Name', 12, True, 12.1, 'Age', 'Age', 'Age']\n",
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400]\n",
+      "{'names': ['Ali', 'Sarah'], 'age': [23, 22]}\n",
+      "['Ali', 'Sarah']\n",
+      "dict_keys(['names', 'age'])\n",
+      "dict_values([['Mohammad', 'Sarah'], [23, 22]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [\"Name\", 12, True, 12.1] \n",
+    "my_list.append(\"Age\")\n",
+    "my_list.append(\"Age\")\n",
+    "my_list.append(\"Age\")\n",
+    "\n",
+    "print(my_list)\n",
+    "\n",
+    "my_list.insert(0,5)\n",
+    "print(my_list)\n",
+    "\n",
+    "squares = [x**2 for x in range(1,21)]\n",
+    "print(squares)\n",
+    "\n",
+    "\n",
+    "set_a = {1,2,3}\n",
+    "set_b = {3}\n",
+    "\n",
+    "set_b.issubset(set_a)\n",
+    "set_b <= set_a\n",
+    "\n",
+    "\n",
+    "my_dict = {\"names\":[\"Ali\",\"Sarah\"],\"age\":[23,22]}\n",
+    "\n",
+    "print(my_dict)\n",
+    "print(my_dict['names'])\n",
+    "\n",
+    "my_dict[\"names\"][0] = \"Mohammad\"\n",
+    "\n",
+    "\n",
+    "print(my_dict.keys())\n",
+    "print(my_dict.values())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "88df6c6a-2fe5-4ce0-b00d-97c2c0cba39a",
    "metadata": {},
@@ -185,21 +239,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "391867f9-e8ae-492d-8d96-e49ce315a5aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Let's spend some time working on this problem \n",
     "\n",
+    "complement = {\"A\":\"T\",\"T\":\"A\",\"C\":\"G\",\"G\":\"C\"}\n",
     "\n",
+    "def reverse_complement(DNA):\n",
+    "    reverse_DNA = \"\"\n",
+    "    for nt in DNA: \n",
+    "        comp_DNA = complement[nt]\n",
+    "        reverse_DNA = reverse_DNA + comp_DNA\n",
+    "    reverse_DNA = reverse_DNA[::-1]\n",
+    "    return reverse_DNA\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3d1eff5e-e75d-45cd-9c4a-2f8c64e3b693",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TTAAACGAAAT\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_DNA = \"ATTTCGTTTAA\"\n",
     "\n",
+    "rev_comp_DNA = reverse_complement(test_DNA)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(rev_comp_DNA)\n"
    ]
   },
   {
